--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "casbin": "^5.30.0",
+    "casbin-mongodb-adapter": "^1.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
